Recipe Page Outline
Changes made to mixes/old-fashioned to be considered as master format
applied to all recipe pages.

--- a/home.html
+++ b/home.html
@@ -76,21 +76,25 @@
 	<div class="container">
 		<div id="body-container-1">
 		<div class="container-title"><h2>Have the ingredients?</h2></div>
-		<div class="container-text"><p>Tell us what you have and we'll tell you what you can make.</p></div>
-			<div class="button"><p>Start</p></div>
+		<div class="container-text"><p>Select all the ingredients you have and we'll provide you with a list of grade A drinks. Think of it as a calculator for cocktails.</p></div>
+			<a href="calculator.html"><div class="button">
+				<div class="start-arrow">
+				</div>
+				<p></p>
+			</div></a>
 		</div>
 	</div>
 	<div class="container">
 		<div id="body-container-2">
-			<div class="container-title"><h2></h2></div>
-		<p></p>
+			<div class="container-title"><h2>Have an idea in mind?</h2></div>
+		<div class="container-text"><p>Sometimes what we want is sitting just out of reach. Explore our taste options to land that perfect drink for the night.</p></div>
 			<div class="button"><p></p></div>
 		</div>
 	</div>
 	<div class="container">
 		<div id="body-container-3">
-		<h2></h2>
-		<p></p>
+		<div class="container-title"><h2>View the whole List</h2></div>
+		<div class="container-text"><p>Search our cocktails to spot the one you're looking for. </p></div>
 			<div class="button"><p></p></div>
 		</div>
 	</div>
