--- a/appendix.html
+++ b/appendix.html
@@ -133,7 +133,9 @@
 
 
 					<div class="test-leaderboard">
-						<div class="banner-ad"></div>
+						<div class="banner-ad">
+							
+						</div>
 					</div>
 				<div class="icon-box">
 					<h3>Something</h3>
