Changes to home menu/ingredients
Minor design changes.

--- a/mixes/old-fashioned.html
+++ b/mixes/old-fashioned.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css" />
 		<link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="../js/jquery.js"></script>
 	</head>
 
 <body>
@@ -45,6 +45,10 @@
 				
 			</ul>
 		</div></a>
+
+		<div class="nav-ad">
+		<img src="../img/300x250-demo.jpg"/>
+	</div>
 	</div>
 </div><!--End Nav Panel-->
 
@@ -111,6 +115,10 @@
 			<div class="recipe-ingredient">
 				<h3>Marachiano Cherry</h3>
 				<img src="../img/cherry.png"/>
+			</div>
+			<div class="recipe-ingredient">
+				<h3>Club Soda</h3>
+				<img src=""/>
 			</div>
 		</div>
 
