--- a/appendix/lemontwist.html
+++ b/appendix/lemontwist.html
@@ -27,7 +27,7 @@
 				<a href="#"><div class="nav"><h3>Whiskey</h3></div></a>
 			</div>
 		</div>
-		<a href="../appendix.html"><div class="nav">
+		<a href="appendix.html"><div class="nav">
 			<h3>Appendix</h3>
 			<ul>
 				
@@ -46,38 +46,68 @@
 			</ul>
 		</div></a>
 
-			<div class="nav-form">
-		</div>
 	</div>
 
 	<div class="nav-ad">
 		<img src="../img/300x250-demo.jpg"/>
 	</div>
-
-	</div>
 </div><!--End Nav Panel-->
 
-<div class="side-body">
-		<div class="headline-container">
-			<h1>Lemon Twist</h1>
-		</div>
-	<div class="ingredient-row">
-		<div class="ingredient-image-box">
-			<img src="../img/500x500-lemon-twist.png"/>
-		</div>
 
-		<div class="ingredient-text-box">
-			<p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+
+<div class="side-body">
+
+	<div class="recipe-headline">
+
+	<h1>Lemon Twist</h1>
+	</div>
+	<div class='recipe-top-row'>
+		<img src="../img/500x500-lemon-twist.png"/>
+		<div class="recipe-text">
+			<h3>Its the subtle things in life</h3>
+			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore."</p>
+			<div class="recipe-button"><p>More</p></div>
 		</div>
 	</div>
+	
+	<div class="recipe-row-2">
 
+		<div class="recipe-ad">
+		<div class="banner-ad"></div>
+		</div>
 
-
-
-
-
+	</div>
+	
+		<div class="recomendations">
+		<h1>Recomended Cocktails</h1>
+			<div class="icon-box">
+					<h3>Something</h3>
+					<img src=/>
+					<p>Read More</p>
+				</div>
+				<div class="icon-box">
+					<h3>Something</h3>
+					<img src=/>
+					<p>Read More</p>
+				</div>
+				<div class="icon-box">
+					<h3>Something</h3>
+					<img src=/>
+					<p>Read More</p>
+				</div>
+				<div class="icon-box">
+					<h3>Something</h3>
+					<img src=/>
+					<p>Read More</p>
+				</div>
+			
+		</div>
 
 		
+
+	
+
+
 </div><!--End Side Body-->
 
 
