--- a/home.html
+++ b/home.html
@@ -60,6 +60,7 @@
 	<h1>What can we do for you?</h1>
 		<div id="headline-list">
 			<ul>
+				<em><li>Choose your path:</li></em>
 
 				<li>Use What You Have</li>
 
