Mobile Friendly Nav
Changed rules to create sliding nav for mobile sizes.

--- a/home.html
+++ b/home.html
@@ -2,24 +2,41 @@
 <!-- A comment is back! -->
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta charset="utf-8">
+
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script type="text/javascript" src="js/jquery.js"></script>
+
+
+		<meta name-"viewport" content="width=device-width">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta charset="utf-8">
 	</head>
 
 <body>
-	<div class="nav-panel">
+	<div id="container">
+<!--New Nav-->
+<header>
+	<div id="hamburger">
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+</header>
+
+<nav>
+
 		<h1>Mix & Stones</h1>
 		<div class="menu">
 		<div class="menu-search">
 		</div>
 
-		<a href="home.html"><div class="nav">
+		<a href="home.html">
+			<div class="nav">
 			<h3>Home</h3>
 		</div></a>
 		<div class="nav">
@@ -53,8 +70,12 @@
 	<div class="nav-ad">
 		<img src="./img/300x250-demo.jpg"/>
 	</div>
-</div><!--End Nav Panel-->
 
+</nav>
+
+<!--End New Nav-->
+
+<div class="content">
 <div class="side-body">
 	<div class="headline-container">
 	<h1>What can we do for you?</h1>
@@ -101,9 +122,9 @@
 	</div>
 	</div>
 </div><!--End Side Body-->
+</div><!--End Content-->
 
-
-
+</div><!--End Container-->
 </body>
 
 </html>
