update to old fashioned mix template to new css styles

--- a/app/mixes/old-fashioned.html
+++ b/app/mixes/old-fashioned.html
@@ -12,7 +12,8 @@
 	</head>
 
 <body>
-	<div class="nav-panel">
+
+	<nav>
 		<h1>Mix & Stones</h1>
 		<div class="menu">
 		<div class="menu-search">
@@ -50,10 +51,10 @@
 		<img src="../img/300x250-demo.jpg"/>
 	</div>
 	</div>
-</div><!--End Nav Panel-->
+</nav><!--End Nav Panel-->
 
 
-
+<div class="content"
 <div class="side-body">
 
 	<div class="recipe-headline">
@@ -177,7 +178,7 @@
 
 </div><!--End Side Body-->
 
-
+</div>
 
 </body>
 
