updates on mixes html

--- a/app/mixes/old-fashioned.html
+++ b/app/mixes/old-fashioned.html
@@ -54,7 +54,7 @@
 </nav><!--End Nav Panel-->
 
 
-<div class="content"
+<div class="content">
 <div class="side-body">
 
 	<div class="recipe-headline">
