update html on mix page to follow most recent css rules

--- a/app/mixes/old-fashioned.html
+++ b/app/mixes/old-fashioned.html
@@ -13,6 +13,8 @@
 
 <body>
 
+	<div id = "container">
+
 	<nav>
 		<h1>Mix & Stones</h1>
 		<div class="menu">
@@ -178,8 +180,8 @@
 
 </div><!--End Side Body-->
 
-</div>
-
+</div><!--End Content-->
+</div><!--End Container-->
 </body>
 
 </html>
